Fix - Page preloader horizontal align

--- a/src/Dashboard/PageLoader.scss
+++ b/src/Dashboard/PageLoader.scss
@@ -2,15 +2,15 @@
   position: absolute;
   left: 0;
   top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   background: white;
   z-index: 100;
 }
 .loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
   width: 50px;
